alignment fix

--- a/style.css
+++ b/style.css
@@ -495,11 +495,10 @@ body {
   }
 }
 
-
-#page2{
-  height: 100%;
-  width: 100%;
-  background-color:#c3c3c3;
+#page2 {
+  height: 100vh;
+  width: 100vw;
+  background-color: #c3c3c3;
   /* padding: 5vw 0; */
   /* display: flex;
   align-items: center; */
@@ -507,7 +506,7 @@ body {
   /* justify-content: center; */
   /* max-width: 100%;  */
 }
-#page2 h1{
+#page2 h1 {
   font-size: 40vw;
   font-family: Poppins;
   text-transform: uppercase;
